<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.EmpleadoInfoActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glInfoVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

    <TextView
        android:id="@+id/tvInfoNombre"
        android:text="@string/nombreLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/glInfoBottom"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/glInfoVertical"
        style="@style/etiquetaInfo"/>

    <TextView
        android:id="@+id/tvInfoApellidos"
        android:text="@string/apellidosLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/glInfoBottom"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/glInfoVertical"
        style="@style/etiquetaInfo"/>

    <TextView
        android:id="@+id/tvInfoEmail"
        android:text="@string/emailLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/glInfoBottom"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/glInfoVertical"
        style="@style/etiquetaInfo"/>

    <TextView
        android:id="@+id/tvInfoPass"
        android:text="@string/passwordLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/glInfoBottom"
        app:layout_constraintVertical_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/glInfoVertical"
        style="@style/etiquetaInfo"/>

    <TextView
        android:id="@+id/tvInfoPuesto"
        android:text="@string/puestoLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/glInfoBottom"
        app:layout_constraintVertical_bias="0.70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        style="@style/etiquetaInfo"/>

    <TextView
        android:id="@+id/tvInfoHorario"
        android:text="@string/horarioLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/glInfoBottom"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        style="@style/etiquetaInfo"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glInfoBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <EditText
        android:id="@+id/etInfoNombre"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvInfoNombre"
        app:layout_constraintStart_toStartOf="@id/glInfoVertical"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/campoInfo"/>

    <EditText
        android:id="@+id/etInfoApellidos"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvInfoApellidos"
        app:layout_constraintStart_toStartOf="@id/glInfoVertical"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/campoInfo" />

    <EditText
        android:id="@+id/etInfoEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvInfoEmail"
        app:layout_constraintStart_toStartOf="@id/glInfoVertical"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/campoInfo" />

    <EditText
        android:id="@+id/etInfoPass"
        android:inputType="textPassword"
        android:maxLength="16"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvInfoPass"
        app:layout_constraintStart_toStartOf="@id/glInfoVertical"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/campoInfo" />

    <Spinner
        android:id="@+id/spInfoPuesto"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoPuesto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        style="@style/spinnerInfo" />

    <Spinner
        android:id="@+id/spInfoHorario"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoHorario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        style="@style/spinnerInfo" />

    <TextView
        android:id="@+id/tvInfoHoras"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/glInfoBottom"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintStart_toStartOf="@+id/spInfoHorario"
        app:layout_constraintEnd_toEndOf="@+id/spInfoHorario"/>

    <Button
        android:id="@+id/btInfoAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/glInfoBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/botonRedondeado"/>


</androidx.constraintlayout.widget.ConstraintLayout>